<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/starswar"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:background="@color/white"
                android:textSize="16sp"
                android:padding="8dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="18dp"/>
        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="14dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/desc"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="12dp"/>
            
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_release"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release"
                        android:textSize="12sp"/>
                </TableRow>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_director"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textSize="12sp"/>
                </TableRow>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_cast"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cast"
                        android:textSize="12sp"/>
                </TableRow>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_budget"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/budget"
                        android:textSize="12sp"/>
                </TableRow>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_dist"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dist"
                        android:textSize="12sp"/>
                </TableRow>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_based"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/based"
                        android:textSize="12sp"/>
                </TableRow>
            </TableLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/starswar"/>

                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/indonesia"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="14dp"
                        android:text="@string/release_date"
                        android:textSize="12sp"/>
                </RelativeLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/starswar"/>

                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/thailand"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="14dp"
                        android:text="@string/release_date"
                        android:textSize="12sp"/>
                </RelativeLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/starswar"/>

                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/malaysia"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="14dp"
                        android:text="@string/release_date"
                        android:textSize="12sp"/>
                </RelativeLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/starswar"/>

                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/singapura"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="14dp"
                        android:text="@string/release_date"
                        android:textSize="12sp"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>